# oraclemanager

./: README.md  dev-requirements.txt  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint_checks_and_tests.yml  release.yml
src/oraclemanager/: __init__.py  oracle_manager.py
tests/data/: config.json
