[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oraclemanager"
version = "1.0.0"
authors = [
  { name="Erik Bierbrauer" },
]
description = "API wrapper around python-oracledb to more easily perform simple database tasks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "oracledb==1.4.2"
]

[project.urls]
"Homepage" = "https://github.com/ebier92/oraclemanager"
"Bug Tracker" = "https://github.com/ebier92/oraclemanager/issues"

[tool.pytest.ini_options]
pythonpath = "src"